[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Character.gd" type="Script" id=1]
[ext_resource path="res://Scripts/States/Die.gd" type="Script" id=2]
[ext_resource path="res://Scripts/States/Hurt.gd" type="Script" id=3]

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="DEBUG" type="Node2D" parent="."]
editor/display_folded = true
scale = Vector2( 0.5, 0.5 )

[node name="STATE_MARKER" type="Label" parent="DEBUG"]
margin_left = -19.7167
margin_top = -28.9752
margin_right = 20.2833
margin_bottom = -14.9752
text = "STATE"

[node name="CharacterShape2D" type="CollisionShape2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="InputHandler" type="Node2D" parent="."]

[node name="List States" type="Node2D" parent="."]
editor/display_folded = true

[node name="Die" type="Node2D" parent="List States"]
script = ExtResource( 2 )

[node name="Hurt" type="Node2D" parent="List States"]
script = ExtResource( 3 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
